@@ -4,6 +4,8 @@ Changelog
 2.13.12 (unreleased)
 --------------------
 
+- Replaced `weightedIntersection` and `weightedUnion` calls with their
+  non-weighted version, as we didn't pass in weights.
 
 2.13.11 (2011-05-02)
 --------------------
